# context-graph

./: .gitignore  AGENTS.md  CLAUDE.md  HARNESS-INTEGRATION-ANALYSIS.md  PLAYERZERO-CONTEXT-GRAPH-DEEP-ANALYSIS.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.harness/: baseline.json  feature_list.json
.harness/context-graph/: graph.db
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: ai-simulator.ts  api.ts  sample-data.ts  types.ts
frontend/src/store/: app-store.ts  chat-store.ts  graph-store.ts
scripts/: check_architecture.py  check_golden_principles.py  check_imports.py  validate.sh
src/context_graph/: __main__.py
src/context_graph/api/: __init__.py  deps.py  routes.py  schemas.py  server.py
src/context_graph/cli/: main.py
src/context_graph/config/: settings.py
src/context_graph/engine/: store.py
src/context_graph/ingest/: _ast_helpers.py  code_intel.py  git_ingest.py  (+2 more)
tests/: conftest.py  test_api.py  test_cli.py  test_code_intel.py  test_models.py  test_multi_lang.py  test_query.py  test_store.py
(+108 files in other folders)
